# fluxdb

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
benches/: comparison.rs  engine.rs
cluster/: node0.toml  node1.toml  node2.toml
contrib/: fluxdb.service
src/: collection.rs  config.rs  database.rs  document.rs  error.rs  index.rs  lib.rs  main.rs  query.rs  redis.rs  server.rs  storage.rs  wal.rs
src/cluster/: health.rs  mod.rs  peer.rs  ring.rs  router.rs
tests/: cluster_integration.rs
