[package]
name = "fluxdb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
crc32fast = "1"
bincode = "1"

[dev-dependencies]
tempfile = "3"
