[package]
name = "fluxdb"
version = "0.1.0"
edition = "2021"

[features]
default = ["server"]
persistence = []
server = ["persistence", "dep:tokio", "dep:clap", "dep:toml"]
redis = ["server"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
crc32fast = "1"
bincode = "1"

# Optional: only needed with the "server" feature
tokio = { version = "1", features = ["full"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["v4", "js"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rusqlite = { version = "0.32", features = ["bundled"] }
redb = "2"
rocksdb = { version = "0.22", default-features = false, features = ["lz4"] }

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bin]]
name = "fluxdb"
required-features = ["server"]
